--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,11 +30,18 @@ dependencies {
     implementation('com.twitter.sdk.android:twitter:3.1.1@aar') {
         transitive = true
     }
-    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
     implementation 'io.fabric.sdk.android:fabric:1.4.3@aar'
     implementation 'com.squareup.picasso:picasso:2.5.2'
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.google.code.gson:gson:2.8.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.9.1'
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
 
 }
